--- a/index.html
+++ b/index.html
@@ -233,13 +233,10 @@
           <div class="testimonial">
             <h5 class="testimonial__header">The first steps towards future.</h5>
             <blockquote class="testimonial__text">
-              The technology they use makes it user-friendly and easy to use.
               Monkecoins can easily be bought and every adjustment is done by
-              the software itself. This platform also provides its users with a
-              guide to assist them so that they don't have to worry about it.
-              Wide community There are abundant users worldwide who have opted
-              for Monkecoin. The community is quite wide-ranging who use
-              Monkecoin for trading and tipping.
+              the software itself. Wide community There are abundant users
+              worldwide who have opted for Monkecoin. The community is quite
+              wide-ranging who use Monkecoin for trading and tipping.
             </blockquote>
             <address class="testimonial__author">
               <img src="img/male.jpg" alt="person" class="testimonial__photo" />
